--- a/stash/public/index.html
+++ b/stash/public/index.html
@@ -13,6 +13,12 @@
             href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap"
             rel="stylesheet"
         />
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
+            rel="stylesheet"
+        />
+        <!-- end of google fonts -->
 
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <!--
