--- a/stash/public/index.html
+++ b/stash/public/index.html
@@ -10,6 +10,14 @@
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
         <link
+            href="https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap"
+            rel="stylesheet"
+        />
+        <link
             href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap"
             rel="stylesheet"
         />
@@ -61,3 +69,13 @@
 
  Initialize Firebase 
 <script src="/__/firebase/init.js"></script> -->
+
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="/__/firebase/8.3.1/firebase-app.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+<script src="/__/firebase/8.3.1/firebase-analytics.js"></script>
+
+<!-- Initialize Firebase -->
+<script src="/__/firebase/init.js"></script>
