--- a/stash/public/index.html
+++ b/stash/public/index.html
@@ -43,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>React Redux App</title>
+        <title>Stash</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -71,11 +71,11 @@
 <script src="/__/firebase/init.js"></script> -->
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="/__/firebase/8.3.1/firebase-app.js"></script>
+<!-- <script src="/__/firebase/8.3.1/firebase-app.js"></script>
 
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
+ TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries 
 <script src="/__/firebase/8.3.1/firebase-analytics.js"></script>
 
-<!-- Initialize Firebase -->
-<script src="/__/firebase/init.js"></script>
+ Initialize Firebase
+<script src="/__/firebase/init.js"></script> -->
